# mathsnip

./: .gitignore  AppDelegate.swift  CLAUDE.md  Info.plist  LICENSE  Makefile  OverlayPanel.swift  PreviewPanel.swift  README.md  StatusBarMenu.swift  build.sh
.github/workflows/: ci.yml
assets/: AppIcon.icns  preview.html  tex2typst.min.js
backends/pix2tex/: Pix2TexBackend.swift
backends/texo/: TexoBackend.swift  inference.py  setup.sh
backends/texo-coreml/: .gitignore  CoreMLInference.swift  MathSnipTokenizer.swift  TexoCoreMLBackend.swift  TexoCoreMLInference.swift  TexoCoreMLTokenizer.swift  export_coreml.py  pyproject.toml  setup.sh
scripts/: inference_texo.py  setup_texo.sh
