[project]
name = "export"
version = "0.1.0"
description = "CoreML export for MathSnip FormulaNet model"
requires-python = ">=3.11"
dependencies = [
    "coremltools>=8.0",
    "huggingface-hub>=0.20.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0<1.5.2",
    "torch>=2.0.0<2.7.1",
    "transformers>=4.40.0",
]
